project card GLightbox added

--- a/index.html
+++ b/index.html
@@ -434,80 +434,70 @@
 				</h2>
 				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-						<div class="relative h-48 overflow-hidden">
-							<a href="my image/P-1.png" class="glightbox" data-gallery="projects" data-title="Student Fee Manager">
-								<img src="my image/P-1.png"
-									 alt="Student Fee Manager"
-									 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110 project-image">
-							</a>
-							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4">
-								<h3 class="text-white text-xl font-bold">Student Fee Manager</h3>
+						<a href="my image/P-1.png" class="block relative group glightbox" data-gallery="projects" data-title="Student Fee Manager">
+							<img src="my image/P-1.png"
+								 alt="Student Fee Manager"
+								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
+								h3 class="text-white text-xl font-bold">Student Fee Manager</h3>
 							</div>
-						</div>
+						</a>
 						<div class="p-4">
 							<p class="text-gray-600 mb-4 line-clamp-2">JavaScript • Chrome APIs • Automation</p>
 							<p class="text-gray-700 text-sm">A lightweight Chrome extension that automates student fee management workflows, reducing manual work and processing time by up to 95%.</p>
 						</div>
 					</div>
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-						<div class="relative h-48 overflow-hidden">
-							<a href="my image/P-2.png" class="glightbox" data-gallery="projects" data-title="Project Alpha">
-								<img src="my image/P-2.png"
-									 alt="Project Alpha"
-									 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110 project-image">
-							</a>
-							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4">
+						<a href="my image/P-2.png" class="block relative group glightbox" data-gallery="projects" data-title="Project Alpha">
+							<img src="my image/P-2.png"
+								 alt="Project Alpha"
+								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
 								<h3 class="text-white text-xl font-bold">Project Alpha</h3>
 							</div>
-						</div>
+						</a>
 						<div class="p-4">
 							<p class="text-gray-600 mb-4 line-clamp-2">Web Development • UI/UX • React</p>
 							<p class="text-gray-700 text-sm">A modern web application with responsive design and interactive user interface built with React and Tailwind CSS.</p>
 						</div>
 					</div>
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-						<div class="relative h-48 overflow-hidden">
-							<a href="my image/P-3.png" class="glightbox" data-gallery="projects" data-title="Data Analytics Dashboard">
-								<img src="my image/P-3.png"
-									 alt="Data Analytics Dashboard"
-									 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110 project-image">
-							</a>
-							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4">
+						<a href="my image/P-3.png" class="block relative group glightbox" data-gallery="projects" data-title="Data Analytics Dashboard">
+							<img src="my image/P-3.png"
+								 alt="Data Analytics Dashboard"
+								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
 								<h3 class="text-white text-xl font-bold">Data Analytics Dashboard</h3>
 							</div>
-						</div>
+						</a>
 						<div class="p-4">
 							<p class="text-gray-600 mb-4 line-clamp-2">Data Visualization • Power BI • Analytics</p>
 							<p class="text-gray-700 text-sm">Interactive dashboard for business intelligence and data analytics with real-time updates and customizable reports.</p>
 						</div>
 					</div>
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-						<div class="relative h-48 overflow-hidden">
-							<a href="my image/P-4.png" class="glightbox" data-gallery="projects" data-title="NLC Performance Report">
-								<img src="my image/P-4.png"
-									 alt="NLC Performance Report"
-									 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110 project-image">
-							</a>
-							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4">
+						<a href="my image/P-4.png" class="block relative group glightbox" data-gallery="projects" data-title="NLC Performance Report">
+							<img src="my image/P-4.png"
+								 alt="NLC Performance Report"
+								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
 								<h3 class="text-white text-xl font-bold">NLC Performance Report</h3>
 							</div>
-						</div>
+						</a>
 						<div class="p-4">
 							<p class="text-gray-600 mb-4 line-clamp-2">Reporting • Excel • Automation</p>
 							<p class="text-gray-700 text-sm">Automated performance reporting system with advanced Excel formulas and VBA macros for data analysis.</p>
 						</div>
 					</div>
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
-						<div class="relative h-48 overflow-hidden">
-							<a href="my image/P-5.png" class="glightbox" data-gallery="projects" data-title="Modern Dashboard UI">
-								<img src="my image/P-5.png"
-									 alt="Modern Dashboard UI"
-									 class="w-full h-full object-cover transition-transform duration-500 hover:scale-110 project-image">
-							</a>
-							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4">
+						<a href="my image/P-5.png" class="block relative group glightbox" data-gallery="projects" data-title="Modern Dashboard UI">
+							<img src="my image/P-5.png"
+								 alt="Modern Dashboard UI"
+								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
 								<h3 class="text-white text-xl font-bold">Modern Dashboard UI</h3>
 							</div>
-						</div>
+						</a>
 						<div class="p-4">
 							<p class="text-gray-600 mb-4 line-clamp-2">UI Design • Dashboard • Web App</p>
 							<p class="text-gray-700 text-sm">A responsive admin dashboard with interactive charts, user management, and dark mode support built with modern web technologies.</p>
