project card GLightbox added

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		<!-- Hero Section -->
 		<section
 			id="home"
-			class="py-16 lg:py-24 relative overflow-hidden bg-gray-900"
+			class="py-12 sm:py-16 lg:py-24 relative overflow-hidden bg-gray-900"
 		>
 			<div id="particles-js" class="absolute inset-0"></div>
 			<div
@@ -180,7 +180,7 @@
 			>
 				<div class="text-center">
 					<div>
-						<h1 class="text-4xl lg:text-6xl mb-6 font-bold text-white">
+						<h1 class="text-3xl sm:text-4xl lg:text-6xl mb-4 sm:mb-6 font-bold text-white leading-tight">
 							MD Bashir Ahmed
 						</h1>
 						<p class="text-white/80 mb-2">Dhanmondi, Jigatola, Dhaka, Bangladesh</p>
@@ -194,7 +194,7 @@
 							<a href="https://github.com/bashir-CSE" target="_blank" rel="noopener" class="hover:underline"><i class="fab fa-github mr-1"></i> GitHub</a>
 						</div>
 						<p
-							class="text-xl lg:text-2xl text-white mb-8 max-w-3xl mx-auto typed-text-container"
+							class="text-base sm:text-lg lg:text-2xl text-white mb-6 sm:mb-8 max-w-3xl mx-auto px-2 typed-text-container"
 							id="typed-text"
 						><span id="typed5"></span></p>
 					</div>
@@ -276,7 +276,7 @@
 				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
 					Technical Skills
 				</h2>
-				<div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-8">
+				<div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-6 sm:gap-8 px-4 sm:px-6">
 					<div class="skill-item">
 						<div class="flex justify-between mb-1">
 							<span class="font-medium">Power BI & Data Analysis</span>
@@ -326,13 +326,13 @@
 		</section>
 
 		<!-- Experience Section -->
-		<section id="experience" class="py-16">
+		<section id="experience" class="py-12 sm:py-16">
 			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
 					Experience
 				</h2>
-				<div class="max-w-4xl mx-auto">
-					<div class="grid md:grid-cols-2 gap-6">
+				<div class="max-w-4xl mx-auto px-4 sm:px-6">
+					<div class="grid md:grid-cols-2 gap-6 px-4 sm:px-6">
 						<!-- Current Position -->
 						<div class="card p-6 shadow-sm">
 							<div class="flex flex-col mb-4">
@@ -427,19 +427,18 @@
 		</section>
 
 		<!-- Projects Section -->
-		<section id="projects" class="py-16 bg-gray-50">
-			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
-				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
+		<section id="projects" class="py-12 sm:py-16 bg-gray-50">
+			<div class="container mx-auto px-3 sm:px-4 lg:px-8">
+				<h2 class="text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12 font-bold">
 					Projects
 				</h2>
-				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+				<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 px-3 sm:px-4">
 					<div class="project-card bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300">
 						<a href="my image/P-1.png" class="block relative group glightbox" data-gallery="projects" data-title="Student Fee Manager">
 							<img src="my image/P-1.png"
 								 alt="Student Fee Manager"
-								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+								 class="w-full h-44 sm:h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw">
 							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
-								h3 class="text-white text-xl font-bold">Student Fee Manager</h3>
 							</div>
 						</a>
 						<div class="p-4">
@@ -451,9 +450,8 @@
 						<a href="my image/P-2.png" class="block relative group glightbox" data-gallery="projects" data-title="Project Alpha">
 							<img src="my image/P-2.png"
 								 alt="Project Alpha"
-								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+								 class="w-full h-44 sm:h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw">
 							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
-								<h3 class="text-white text-xl font-bold">Project Alpha</h3>
 							</div>
 						</a>
 						<div class="p-4">
@@ -465,9 +463,8 @@
 						<a href="my image/P-3.png" class="block relative group glightbox" data-gallery="projects" data-title="Data Analytics Dashboard">
 							<img src="my image/P-3.png"
 								 alt="Data Analytics Dashboard"
-								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+								 class="w-full h-44 sm:h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw">
 							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
-								<h3 class="text-white text-xl font-bold">Data Analytics Dashboard</h3>
 							</div>
 						</a>
 						<div class="p-4">
@@ -479,9 +476,8 @@
 						<a href="my image/P-4.png" class="block relative group glightbox" data-gallery="projects" data-title="NLC Performance Report">
 							<img src="my image/P-4.png"
 								 alt="NLC Performance Report"
-								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+								 class="w-full h-44 sm:h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw">
 							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
-								<h3 class="text-white text-xl font-bold">NLC Performance Report</h3>
 							</div>
 						</a>
 						<div class="p-4">
@@ -493,9 +489,8 @@
 						<a href="my image/P-5.png" class="block relative group glightbox" data-gallery="projects" data-title="Modern Dashboard UI">
 							<img src="my image/P-5.png"
 								 alt="Modern Dashboard UI"
-								 class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy">
+								 class="w-full h-44 sm:h-48 object-cover transition-transform duration-500 group-hover:scale-110 project-image" loading="lazy" sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw">
 							<div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-4 pointer-events-none">
-								<h3 class="text-white text-xl font-bold">Modern Dashboard UI</h3>
 							</div>
 						</a>
 						<div class="p-4">
@@ -512,16 +507,16 @@
 		</section>
 
 		<!-- Education & Certifications -->
-		<section id="education" class="py-16 bg-gray-50">
-			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
-				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
+		<section id="education" class="py-12 sm:py-16 bg-gray-50">
+			<div class="container mx-auto px-3 sm:px-4 lg:px-8">
+				<h2 class="text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12 font-bold">
 					Education &amp; Certifications
 				</h2>
-				<div class="max-w-4xl mx-auto">
+				<div class="max-w-4xl mx-auto px-4 sm:px-6">
 					<div class="grid lg:grid-cols-2 gap-8">
 						<!-- Education -->
 						<div class="card p-6 shadow-sm">
-							<div class="flex items-center mb-4">
+							<div class="flex items-center mb-3 sm:mb-4">
 								<i
 									class="fas fa-graduation-cap text-2xl text-blue-600 mr-3"
 								></i>
@@ -588,15 +583,15 @@
 		</section>
 
 		<!-- Currently Learning Section -->
-		<section id="learning" class="py-16">
-			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
-				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
+		<section id="learning" class="py-12 sm:py-16">
+			<div class="container mx-auto px-3 sm:px-4 lg:px-8">
+				<h2 class="text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12 font-bold">
 					Currently Learning
 				</h2>
-				<p class="text-center text-lg text-gray-600 max-w-2xl mx-auto mb-10">
+				<p class="text-center text-base sm:text-lg text-gray-600 max-w-2xl mx-auto mb-8 sm:mb-10 px-4">
 					Always expanding my skillset across analytics, automation, and AI to deliver more value in data-driven roles.
 				</p>
-				<div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-6 text-center">
+				<div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6 text-center px-4 sm:px-6">
 					<div class="card p-6 shadow-sm">
 						<div class="text-4xl text-blue-600 mb-3">
 							<i class="fab fa-python"></i>
@@ -638,12 +633,12 @@
 		</section>
 
 		<!-- Activities & Volunteering -->
-		<section id="activities" class="py-16">
-			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
-				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
+		<section id="activities" class="py-12 sm:py-16">
+			<div class="container mx-auto px-3 sm:px-4 lg:px-8">
+				<h2 class="text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12 font-bold">
 					Activities &amp; Volunteering
 				</h2>
-				<div class="max-w-4xl mx-auto grid md:grid-cols-3 gap-6">
+				<div class="max-w-4xl mx-auto grid sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6 px-4 sm:px-6">
 					<div class="card p-6 shadow-sm">
 						<div class="flex items-center mb-3">
 							<i class="fas fa-user-tie text-2xl text-blue-600 mr-3"></i>
@@ -684,7 +679,7 @@
 		</section>
 
 		<!-- Recommendations Section -->
-		<section id="recommendations" class="py-16">
+		<section id="recommendations" class="py-12 sm:py-16">
 			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
 					Recommendations
@@ -743,12 +738,12 @@
 		</section>
 
 		<!-- Contact Section -->
-		<section id="contact" class="py-16 bg-gray-50">
+		<section id="contact" class="py-12 sm:py-16 bg-gray-50">
 			<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 				<h2 class="text-3xl lg:text-4xl text-center mb-12 font-bold">
 					Get In Touch
 				</h2>
-				<div class="max-w-4xl mx-auto grid lg:grid-cols-2 gap-8">
+				<div class="max-w-4xl mx-auto grid lg:grid-cols-2 gap-6 sm:gap-8 px-4 sm:px-6">
 					<!-- Contact Information -->
 					<div class="card p-6 shadow-sm">
 						<h3 class="text-xl font-semibold text-center mb-2">
