Updated About Me section and justified text

--- a/index.html
+++ b/index.html
@@ -220,54 +220,21 @@
 					About Me
 				</h2>
 				<div class="max-w-4xl mx-auto">
-					<div class="card p-6 mb-8 shadow-sm">
-						<div class="flex items-center mb-4">
-							<i class="fas fa-user-tie text-2xl text-blue-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">Professional Summary</h3>
-						</div>
-						<p class="text-lg leading-relaxed text-gray-700">
-							Detail-oriented IT professional specializing in analytics, reporting, and system support. I create actionable insights with Power BI, Power Query, and Advanced Excel, and automate workflows using Google Apps Script. I manage SDM databases, deliver operational dashboards, and provide first-level IT support and user training across Microsoft 365 and Google Workspace.
-						</p>
-					</div>
-
-					<div class="card p-6 shadow-sm">
-						<div class="flex items-center mb-4">
-							<i class="fas fa-code text-2xl text-blue-600 mr-3"></i>
-							<h3 class="text-xl font-semibold">Key Skills</h3>
-						</div>
-						<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-chart-bar mr-1"></i>Power BI
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-file-excel mr-1"></i>Advanced Excel
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-search mr-1"></i>Power Query
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fab fa-google mr-1"></i>Google Apps Script
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fab fa-python mr-1"></i>Python (Data Analysis)
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-database mr-1"></i>SQL
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-server mr-1"></i>Oracle ERP
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fab fa-microsoft mr-1"></i>Microsoft 365
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fab fa-google mr-1"></i>Google Workspace
-							</span>
-							<span class="badge px-3 py-2 text-sm font-medium text-center rounded-md">
-								<i class="fas fa-network-wired mr-1"></i>IT Support & Troubleshooting
-							</span>
-						</div>
-					</div>
+					<p class="text-lg leading-relaxed text-gray-700 text-justify">
+						Hello! I’m Md. Bashir Ahmed Showrav, an IT professional with a strong passion for technology, problem-solving, and continuous learning. My journey into the tech world began with curiosity — I’ve always been fascinated by how systems work and how we can make them better, smarter, and more efficient.
+						<br><br>
+						Currently, I’m working as an IT Officer at Unicom Education Consultant Services Ltd., where I manage daily IT operations, support ERP and business applications, and help ensure smooth, secure systems for users across the organization. Every issue I solve or improvement I implement reminds me why I love what I do.
+						<br><br>
+						Earlier, I interned at DBL Group as part of the Production Planning team, where I got hands-on experience with Oracle ERP. There, I worked on master data management, ERP reporting, and supported planning workflows — gaining a solid foundation in enterprise systems and business processes.
+						<br><br>
+						Beyond the job titles, what defines me is my commitment to improving the way we work using technology and data. I’ve developed tools using Microsoft Excel, Power BI, and Google Apps Script that automate tasks, track performance, and deliver insights to decision-makers. I believe that even small innovations can make a big difference.
+						<br><br>
+						I’m also someone who values simplicity and growth. I enjoy exploring how technology can solve real-world problems, and I’m actively building my skills toward a future in data science and analytics. My long-term goal is to contribute to impactful projects — whether it’s improving education systems, supporting sustainability, or streamlining operations for growing companies.
+						<br><br>
+						Outside of work, I’m a lifelong learner, a bit of a dreamer (yes, Iceland is on my travel bucket list!), and someone who enjoys quiet moments of reflection, creativity, and setting meaningful goals.
+						<br><br>
+						Thanks for taking the time to get to know me. I’m excited about what the future holds and always open to new connections, ideas, and opportunities to collaborate.
+					</p>
 				</div>
 			</div>
 		</section>
