--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>MD Bashir Ahmed - IT Professional Portfolio</title>
+	<link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%23007bff'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='50' fill='%23ffffff' text-anchor='middle'%3EB%3C/text%3E%3C/svg%3E" type="image/svg+xml">
 
 	<!-- Tailwind CSS -->
 	<script src="https://cdn.tailwindcss.com"></script>
@@ -106,8 +107,8 @@
 		<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 			<div class="flex flex-col md:flex-row items-center">
 				<div class="md:w-1/2 mb-10 md:mb-0 animate-fadeIn text-center md:text-left">
-					<h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Hello, I'm <span
-							class="text-blue-500">Md Bashir Ahmed</span></h1>
+					<h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Hello, I'm <span
+							class="text-blue-500 text-shadow-sm">Md Bashir Ahmed</span></h2>
 					<div class="text-2xl md:text-3xl font-semibold text-gray-600 mb-6" id="typed-text-container">
 						<span id="typed5"></span>
 					</div>
@@ -130,7 +131,7 @@
 							class="w-64 h-64 md:w-80 md:h-80 bg-indigo-500 rounded-full opacity-10 absolute -bottom-6 -right-6">
 						</div>
 						<img src="my image/img-1.jpg" alt="Photo de profil"
-							class="relative w-80 h-80 md:w-96 md:h-96 object-cover rounded-full border-4 border-white shadow-xl">
+							class="relative w-96 h-96 md:w-96 md:h-96 object-cover rounded-full border-4 border-white shadow-xl">
 					</div>
 				</div>
 			</div>
@@ -775,4 +776,3 @@
 </body>
 
 </html>
-
